--- a/homeworks/CMakeLists.txt
+++ b/homeworks/CMakeLists.txt
@@ -45,6 +45,7 @@ add_subdirectory(LinearFE1D)
 add_subdirectory(LinFeReactDiff)
 add_subdirectory(MatODE)
 add_subdirectory(MaximumPrinciple)
+add_subdirectory(Mehrstellenverfahren)
 add_subdirectory(MIRK)
 add_subdirectory(MixedFEMWave)
 add_subdirectory(NitscheMethod)
